@@ -1,16 +1,32 @@
 ;;; nethack-api.el -- low level Emacs interface the lisp window-port
-;;; of Nethack-3.3.x
-;;; $Id$
 
-;;; originally a machine translation of nethack-3.3.0/doc/window.doc
-;;; from the nethack src package.
+;; Copyright (C) 2002  Ryan Yeske and Shawn Betts
 
-;;; Ryan Yeske (rcyeske@vcn.bc.ca)
-;;; Sat Mar 18 11:24:02 2000
+;; Author: Ryan Yeske
+;; Created: Sat Mar 18 11:24:02 2000
+;; Version: $Id$
+;; Keywords: games
 
+;; This file is free software; you can redistribute it and/or modify
+;; it under the terms of the GNU General Public License as published by
+;; the Free Software Foundation; either version 2, or (at your option)
+;; any later version.
+
+;; This file is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+
+;; You should have received a copy of the GNU General Public License
+;; along with GNU Emacs; see the file COPYING.  If not, write to
+;; the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+;; Boston, MA 02111-1307, USA.
 
 ;;; Commentary:
-;; 
+;; originally a machine translation of nethack-3.3.0/doc/window.doc
+;; from the nethack src package.
+
+;;; Code:
 
 (require 'gamegrid)
 
