@@ -1,4 +1,32 @@
-(defconst nethack-empty-glyph
+;;; nethack-glyphs.el --- graphical tiles
+
+;; Copyright (C) 2002  Ryan Yeske and Shawn Betts
+
+;; Author: Shawn Betts <sabetts@vcn.bc.ca>
+;; Keywords: games
+
+;; This file is free software; you can redistribute it and/or modify
+;; it under the terms of the GNU General Public License as published by
+;; the Free Software Foundation; either version 2, or (at your option)
+;; any later version.
+
+;; This file is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+
+;; You should have received a copy of the GNU General Public License
+;; along with GNU Emacs; see the file COPYING.  If not, write to
+;; the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+;; Boston, MA 02111-1307, USA.
+
+;;; Commentary:
+
+;; Should this be an auto generated file?
+
+;;; Code:
+
+(defconst nethack-empty-glyph 
   (create-image "/* XPM */
 static char *xpm[] = {
 /* width height ncolors chars_per_pixel */
@@ -38849,3 +38877,4 @@ static char *xpm[] = {
 ))
 
 (provide 'nethack-glyphs)
+;;; nethack-glyphs.el ends here
