@@ -1,4 +1,32 @@
-(require 'nethack-api)
+;;; nethack-keys.el --- key bindings for nethack-el
+
+;; Copyright (C) 2002  Ryan Yeske and Shawn Betts
+
+;; Author: Ryan C Yeske <rcyeske@vcn.bc.ca>
+;; Keywords: games
+
+;; This file is free software; you can redistribute it and/or modify
+;; it under the terms of the GNU General Public License as published by
+;; the Free Software Foundation; either version 2, or (at your option)
+;; any later version.
+
+;; This file is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+
+;; You should have received a copy of the GNU General Public License
+;; along with GNU Emacs; see the file COPYING.  If not, write to
+;; the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+;; Boston, MA 02111-1307, USA.
+
+;;; Commentary:
+
+;; 
+
+;;; Code:
+
+(require 'nethack-api) 
 
 (defvar nethack-accelerator-chars
   [?a ?b ?c ?d ?e ?f ?g ?h ?i ?j ?k ?l ?m ?n ?o ?p ?q ?r ?s ?t ?u ?v
@@ -299,3 +327,5 @@
 
 
 (provide 'nethack-keys)
+
+;;; nethack-keys.el ends here
